--- a/src/app/Carrusel.module.css
+++ b/src/app/Carrusel.module.css
@@ -9,12 +9,14 @@
 .carousel-slide {
     position: relative;
     width: 100%;
+    height: var(--carousel-height); /* Ajusta la altura del contenedor del carrusel */
     overflow: hidden;
 }
 
 .carousel-image {
     width: 100%;
-    object-fit: cover;
+    height: 100%;
+    object-fit: cover; /* Cubrir el contenedor */
     display: block;
 }
 
@@ -31,15 +33,15 @@
     z-index: 1;
 }
 
-.carousel-arrow-left {
+.carousel-arrow.left {
     left: 10px;
 }
 
-.carousel-arrow-right {
+.carousel-arrow.right {
     right: 10px;
 }
 
-.dots-container {
+.carousel-dots-container {
     position: absolute;
     bottom: 10px;
     left: 50%;
@@ -48,7 +50,7 @@
     z-index: 1;
 }
 
-.dot {
+.carousel-dot {
     width: 10px;
     height: 10px;
     border-radius: 50%;
@@ -57,6 +59,6 @@
     cursor: pointer;
 }
 
-.dot-active {
+.carousel-dot.active {
     background: white;
 }
